--- a/PriconneReTLInstaller/PriconneReTLInstaller.csproj
+++ b/PriconneReTLInstaller/PriconneReTLInstaller.csproj
@@ -94,6 +94,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoggerFunctions.cs" />
+    <Compile Include="HelperFunctions.cs" />
     <Compile Include="InstallerFunctions.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
