UI event handling changes

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -88,21 +88,24 @@ any user created files already present.</value>
                 <value>Current Mode: Uninstall</value>
             </setting>
             <setting name="uninstallModeDescription" serializeAs="String">
-                <value>Removes the translation patch files, but keeps any user files.</value>
+                <value>Removes the translation patch.
+Keeps any user created files.
+Depending on the options selected, keeps or removes config/ignored/interop files.</value>
             </setting>
-            <setting name="fredownloadMode" serializeAs="String">
-                <value>Current Mode: Force Redownload / Reinstall</value>
+            <setting name="reinstallMode" serializeAs="String">
+                <value>Current Mode: Reinstall</value>
             </setting>
-            <setting name="fredownloadModeDescription" serializeAs="String">
-                <value>Removes the translation patch, inculding the generated interop assemblies and then installs the latest version.
-Keeps config files and ignored files, as well as any user created files.</value>
+            <setting name="reinstallModeDescription" serializeAs="String">
+                <value>Removes the translation patch, and then installs the latest version.
+Keeps any user created files.
+Depending on the options selected, keeps or removes config/ignored/interop files.</value>
             </setting>
             <setting name="updateMode" serializeAs="String">
                 <value>Current Mode: Update</value>
             </setting>
             <setting name="updateModeDescription" serializeAs="String">
-                <value>Updates the current translation patch installation by adding/removing/renaming files compared to the current version.
-Keeps config files.</value>
+                <value>Updates the current translation patch installation by removing the the current version and installing the latest.
+Keeps user files, as well as config/ignored/interop files.</value>
             </setting>
             <setting name="disabledMode" serializeAs="String">
                 <value>Current Mode: Disabled</value>
@@ -110,24 +113,6 @@ Keeps config files.</value>
             <setting name="disabledModeDescription" serializeAs="String">
                 <value>Operation disabled due to an error.
 See log for details.</value>
-            </setting>
-            <setting name="deleteConfigText" serializeAs="String">
-                <value>Removes config files.</value>
-            </setting>
-            <setting name="keepConfigText" serializeAs="String">
-                <value>Keeps config files.</value>
-            </setting>
-            <setting name="deleteIgnoredText" serializeAs="String">
-                <value>Removes ignored files.</value>
-            </setting>
-            <setting name="keepIgnoredText" serializeAs="String">
-                <value>Keeps ignored files.</value>
-            </setting>
-            <setting name="deleteInteropsText" serializeAs="String">
-                <value>Deletes interop assemblies.</value>
-            </setting>
-            <setting name="keepInteropsText" serializeAs="String">
-                <value>Keeps interop assemblies.</value>
             </setting>
         </PriconneReTLInstaller.Properties.Settings>
         <PriconneReTLUpdater.Properties.Settings>
