Change logic order for download to happen before removal, so the current files are not lost in case of a download exception. Move process success / fail messages to finally block.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -48,28 +48,6 @@
             <setting name="githubApi" serializeAs="String">
                 <value>https://api.github.com/repos/ImaterialC/PriconneRe-TL</value>
             </setting>
-            <setting name="helpText" serializeAs="String">
-                <value>How to use:
-
-First / Fresh Install:
-If you have never used the patch before, or you don't have it currently installed, just press the Start button, and the application will donwload and install the translation patch for you.
-If you have config files left over from a previous installation, the application will keep those.
-
-Update:
-If you already have a version of the translation patch applied, just press the Start button, and the application will update it by comparing the latest with the currently applied version, and adding/removing/renaming the necessery files.
-Important configuration files are not touched during this process.
-
-Force Redownload / Reinstall:
-If you check the "Force Redownload" option befor pressing the Start button, the application will delete the currently installed translation patch version, and donwload and install the latest release. It's like and Uninstall + Install
-Force Redownload keeps the important config files untouched.
-
-Uninstall:
-If you check the "Uninstall" option before pressing the Start button, the application will remove the currently installed translation patch.
-Depending on if you checked the "Delete config files" option, it will either keep or delete the important config files too.
-
-By checking / unchecking the "Show Logs" option, you can view/hide a detailed progress/output log.
-All the operations processed are always logged into the ReTLUpdater.log file in the application's folder, regardless of this option.</value>
-            </setting>
             <setting name="aboutText" serializeAs="String">
                 <value>
 Inspired by https://github.com/touanu/PriconeTL_Updater
@@ -77,7 +55,7 @@ Inspired by https://github.com/touanu/PriconeTL_Updater
 All assets used in this application are properties of CyberAgent, Inc., Cygames, Inc. / their respective creators.</value>
             </setting>
             <setting name="installMode" serializeAs="String">
-                <value>Current Mode: Install</value>
+                <value>Current Operation: Install</value>
             </setting>
             <setting name="installModeDescription" serializeAs="String">
                 <value>Installs the translation patch.
@@ -85,7 +63,7 @@ Keeps config files, ignored files and
 any user created files already present.</value>
             </setting>
             <setting name="uninstallMode" serializeAs="String">
-                <value>Current Mode: Uninstall</value>
+                <value>Current Operation: Uninstall</value>
             </setting>
             <setting name="uninstallModeDescription" serializeAs="String">
                 <value>Removes the translation patch.
@@ -93,7 +71,7 @@ Keeps any user created files.
 Depending on the options selected, keeps or removes config/ignored/interop files.</value>
             </setting>
             <setting name="reinstallMode" serializeAs="String">
-                <value>Current Mode: Reinstall</value>
+                <value>Current Operation: Reinstall</value>
             </setting>
             <setting name="reinstallModeDescription" serializeAs="String">
                 <value>Removes the translation patch, and then installs the latest version.
@@ -101,14 +79,14 @@ Keeps any user created files.
 Depending on the options selected, keeps or removes config/ignored/interop files.</value>
             </setting>
             <setting name="updateMode" serializeAs="String">
-                <value>Current Mode: Update</value>
+                <value>Current Operation: Update</value>
             </setting>
             <setting name="updateModeDescription" serializeAs="String">
                 <value>Updates the current translation patch installation by removing the the current version and installing the latest.
 Keeps user files, as well as config/ignored/interop files.</value>
             </setting>
             <setting name="disabledMode" serializeAs="String">
-                <value>Current Mode: Disabled</value>
+                <value>Current Operation: Disabled</value>
             </setting>
             <setting name="disabledModeDescription" serializeAs="String">
                 <value>Operation disabled due to an error.
