Implement game launching, install / update no longer default but selectable, optimize UI layout

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -92,6 +92,18 @@ Keeps user files, as well as config/ignored/interop files.</value>
                 <value>Operation disabled due to an error.
 See log for details.</value>
             </setting>
+            <setting name="launchMode" serializeAs="String">
+                <value>Current Operation: Launch Game</value>
+            </setting>
+            <setting name="launchModeDescrption" serializeAs="String">
+                <value>Launches the game without any translation patch related operation.</value>
+            </setting>
+            <setting name="noOperationMode" serializeAs="String">
+                <value>Current Operation: No Operation</value>
+            </setting>
+            <setting name="noOperationModeDescription" serializeAs="String">
+                <value>No operation selected.</value>
+            </setting>
         </PriconneReTLInstaller.Properties.Settings>
         <PriconneReTLUpdater.Properties.Settings>
             <setting name="uninstallFiles" serializeAs="Xml">
