--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -5,6 +5,9 @@
             <section name="PriconneReTLInstaller.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="PriconneReTLUpdater.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PriconneReTLInstaller.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -233,4 +236,11 @@ See log for details.</value>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <PriconneReTLInstaller.Properties.Settings>
+      <setting name="launchState" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </PriconneReTLInstaller.Properties.Settings>
+  </userSettings>
 </configuration>
