Change Launch Game to disabled by default

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -239,7 +239,7 @@ See log for details.</value>
   <userSettings>
     <PriconneReTLInstaller.Properties.Settings>
       <setting name="launchState" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
