Developing AutoUpdater installer form. Creating BaseForm to move some event handlers to it and have other forms inherit from it.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -48,7 +48,7 @@
                     </ArrayOfString>
                 </value>
             </setting>
-            <setting name="githubApi" serializeAs="String">
+            <setting name="patchGithubApi" serializeAs="String">
                 <value>https://api.github.com/repos/ImaterialC/PriconneRe-TL</value>
             </setting>
             <setting name="aboutText" serializeAs="String">
@@ -106,6 +106,12 @@ See log for details.</value>
             </setting>
             <setting name="noOperationModeDescription" serializeAs="String">
                 <value>No operation selected.</value>
+            </setting>
+            <setting name="auGithubApi" serializeAs="String">
+                <value>https://api.github.com/repos/tynave/PriconneReTL-AutoUpdater</value>
+            </setting>
+            <setting name="auAppGithubApi" serializeAs="String">
+                <value>https://api.github.com/repos/tynave/PriconneReTL-AutoUpdaterApp</value>
             </setting>
         </PriconneReTLInstaller.Properties.Settings>
         <PriconneReTLUpdater.Properties.Settings>
