--- a/PriconneReTLInstaller/PriconneReTLInstaller.csproj
+++ b/PriconneReTLInstaller/PriconneReTLInstaller.csproj
@@ -355,5 +355,8 @@
   <ItemGroup>
     <None Include="Resources\scroll_disabled.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\install_button_disabled.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
