Implement functionality to edit ignored files

--- a/PriconneReTLInstaller/PriconneReTLInstaller.csproj
+++ b/PriconneReTLInstaller/PriconneReTLInstaller.csproj
@@ -179,6 +179,12 @@
     <Compile Include="BaseForm.Designer.cs">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingsForm.Designer.cs">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoggerFunctions.cs" />
     <Compile Include="HelperFunctions.cs" />
     <Compile Include="InstallerFunctions.cs" />
@@ -211,6 +217,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="PriconneReTLInstaller_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
@@ -357,6 +366,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\install_button_disabled.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add_button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add_button_disabled.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\defaults_button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\defaults_button_disabled.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\remove_button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\remove_button_disabled.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\save_button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\save_button_disabled.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
