Handle launching with DMMGamePlayerFastLauncher different. Added new form to set the shortcut of the fastlauncher and use that for launching the game.

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -247,6 +247,9 @@ See log for details.</value>
       <setting name="launchState" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="fastLauncherLink" serializeAs="String">
+        <value />
+      </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
 </configuration>
