--- a/PriconneReTLInstaller/Properties/Settings.settings
+++ b/PriconneReTLInstaller/Properties/Settings.settings
@@ -101,5 +101,8 @@ See log for details.</Value>
     <Setting Name="auAppGithubApi" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://api.github.com/repos/tynave/PriconneReTL-AutoUpdaterApp</Value>
     </Setting>
+    <Setting Name="fastLauncherLink" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
