Add check for fastlauncher shortcut. Add version number label. Change autoupdater installer interface: add link labels. Trim gamepath label if longer than 55 chars

--- a/PriconneReTLInstaller/PriconneReTLInstaller.csproj
+++ b/PriconneReTLInstaller/PriconneReTLInstaller.csproj
@@ -73,6 +73,12 @@
   <PropertyGroup>
     <ApplicationIcon>Resources\jewel.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>PriconneTLInstaller.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -231,6 +237,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="PriconneReTLInstaller_TemporaryKey.pfx" />
+    <None Include="PriconneTLInstaller.snk" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
