--- a/PriconneReTLInstaller/Properties/Settings.settings
+++ b/PriconneReTLInstaller/Properties/Settings.settings
@@ -31,6 +31,7 @@
 &lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
   &lt;string&gt;BepInEx/config/AutoTranslatorConfig.ini&lt;/string&gt;
   &lt;string&gt;BepInEx/config/BepInEx.cfg&lt;/string&gt;
+  &lt;string&gt;BepInEx/config/PriconneTLFixup.cfg&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="patchGithubApi" Type="System.String" Scope="Application">
@@ -103,6 +104,9 @@ See log for details.</Value>
     </Setting>
     <Setting Name="fastLauncherLink" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
