--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -35,6 +35,7 @@
                     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
                         <string>BepInEx/config/AutoTranslatorConfig.ini</string>
                         <string>BepInEx/config/BepInEx.cfg</string>
+                        <string>BepInEx/config/PriconneTLFixup.cfg</string>
                     </ArrayOfString>
                 </value>
             </setting>
@@ -249,6 +250,9 @@ See log for details.</value>
       </setting>
       <setting name="fastLauncherLink" serializeAs="String">
         <value />
+      </setting>
+      <setting name="UpgradeRequired" serializeAs="String">
+        <value>True</value>
       </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
