Set desktop as default path for picking fastlauncher shortcut. Delete empty OnClose method on fastlauncher form. Change settings version upgrade logic

--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -251,8 +251,8 @@ See log for details.</value>
       <setting name="fastLauncherLink" serializeAs="String">
         <value />
       </setting>
-      <setting name="UpgradeRequired" serializeAs="String">
-        <value>True</value>
+      <setting name="LastKnownVersion" serializeAs="String">
+        <value>1.3.0.0</value>
       </setting>
     </PriconneReTLInstaller.Properties.Settings>
   </userSettings>
