--- a/PriconneReTLInstaller/Properties/Settings.settings
+++ b/PriconneReTLInstaller/Properties/Settings.settings
@@ -105,8 +105,8 @@ See log for details.</Value>
     <Setting Name="fastLauncherLink" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+    <Setting Name="LastKnownVersion" Type="System.String" Scope="User">
+      <Value Profile="(Default)">1.3.0.0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
