--- a/PriconneReTLInstaller/App.config
+++ b/PriconneReTLInstaller/App.config
@@ -104,6 +104,17 @@ See log for details.</value>
             <setting name="auAppGithubApi" serializeAs="String">
                 <value>https://api.github.com/repos/tynave/PriconneReTL-AutoUpdaterApp</value>
             </setting>
+            <setting name="cannotStartDMMFastLauncherError" serializeAs="String">
+                <value>DMMGamePlayerFastLauncher shortcut not set or not valid!
+
+In order to be able to launch the game via the DMMGamePlayerFastLauncher, you need to set the shortcut of it in the installer. 
+
+If you have moved/removed/renamed the previously set shortcut, please re-set it. 
+
+Press the OK button to open the window for setting the shortcut. Press the Cancel button to abort the operation. 
+
+You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Set DMMGamePlayerFastLauncher shortcut" option.</value>
+            </setting>
         </PriconneReTLInstaller.Properties.Settings>
         <PriconneReTLUpdater.Properties.Settings>
             <setting name="uninstallFiles" serializeAs="Xml">
