--- a/PriconneReTLInstaller/Properties/Settings.settings
+++ b/PriconneReTLInstaller/Properties/Settings.settings
@@ -108,5 +108,16 @@ See log for details.</Value>
     <Setting Name="LastKnownVersion" Type="System.String" Scope="User">
       <Value Profile="(Default)">1.3.0.0</Value>
     </Setting>
+    <Setting Name="cannotStartDMMFastLauncherError" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">DMMGamePlayerFastLauncher shortcut not set or not valid!
+
+In order to be able to launch the game via the DMMGamePlayerFastLauncher, you need to set the shortcut of it in the installer. 
+
+If you have moved/removed/renamed the previously set shortcut, please re-set it. 
+
+Press the OK button to open the window for setting the shortcut. Press the Cancel button to abort the operation. 
+
+You can set the shortcut any time by clicking the "Settings" icon (scroll) and selecting the "Set DMMGamePlayerFastLauncher shortcut" option.</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
